// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GettingStartedGuide should render correctly when guide is at bottom or when guide is at top 1`] = `
<Fragment>
  <Panel
    actions={null}
    sectioned={true}
    title="Getting Started"
  >
    <p>
      <strong>
         Features
      </strong>
       
    </p>
    <CardGroup>
      <Card>
        <CardTitle>
          <Send
            size="20"
            style={
              Object {
                "transform": "rotate(-45deg)",
                "verticalAlign": "5%",
              }
            }
          />
              Sending with Sparkpost
        </CardTitle>
        <CardContent>
          Learn how to send emails, integrate our API into your code, and make the most of our powerful analytics.
        </CardContent>
        <CardActions>
          <ButtonWrapper>
            <Button
              color="orange"
              onClick={[Function]}
              size="default"
            >
              Start Sending
            </Button>
          </ButtonWrapper>
        </CardActions>
      </Card>
    </CardGroup>
  </Panel>
</Fragment>
`;

exports[`GettingStartedGuide should render correctly when guide is at bottom or when guide is at top 2`] = `
<Fragment>
  <Panel
    actions={
      Array [
        Object {
          "color": "blue",
          "content": <span>
             Move to Bottom 
            <ArrowDownward
              size="20"
            />
             
          </span>,
          "onClick": undefined,
        },
      ]
    }
    sectioned={true}
    title="Getting Started"
  >
    <p>
      <strong>
         Features
      </strong>
       
    </p>
    <CardGroup>
      <Card>
        <CardTitle>
          <Send
            size="20"
            style={
              Object {
                "transform": "rotate(-45deg)",
                "verticalAlign": "5%",
              }
            }
          />
              Sending with Sparkpost
        </CardTitle>
        <CardContent>
          Learn how to send emails, integrate our API into your code, and make the most of our powerful analytics.
        </CardContent>
        <CardActions>
          <ButtonWrapper>
            <Button
              color="orange"
              onClick={[Function]}
              size="default"
            >
              Start Sending
            </Button>
          </ButtonWrapper>
        </CardActions>
      </Card>
    </CardGroup>
  </Panel>
</Fragment>
`;
